style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');

*{
    box-sizing:border-box;
    font-family: 'Open Sans', sans-serif ;
}


.contain{
  
    width:1400px;
    padding: 40px;
    margin: 0 auto;
    /* border: 1px solid blue; */
  
} 

.menu1{
        background-image:url(images/menupic.png);
        background-repeat:no-repeat;
        background-size: cover;
         width:1400px;
        padding:75px;
        margin: 0 auto;
        border: none;
}

.contain1{
    background-image:url(images/homeHero.png);
    background-repeat:no-repeat;
    width:1400px;
    padding:75px;
    margin: 0 auto;
    /* border: 1px solid blue; */
}

    .container{
        width: 1400px;
        padding: 50px;
        margin: 0 auto;
        /* border: 1px solid  black; */
    } 

    .container1{
        width: 1400px;
        padding: 0px;
        margin: 0 auto;
        /* border: 2px solid blue; */
        background-color: black;
    } 

  .imgcontain{
      width: 343px;
      /* padding: 25px; */
      display:flex;
      flex-direction: row;
      
      /* border: 1px solid blue; */

  }


.box1{
 
    width: 50%;
    /* border: 1px solid green; */
    padding: 25px  ;
    margin: 0 auto;
    
    
 }

 .logobox{
      
    width: 150px;
    /* border: 1px solid green; */
    padding: 5px;
    margin: 0 auto;
    
 }

 .box2{
      
       
    width: 346px;
    /* border: 1px solid black; */
    padding: 40px 10px ;
    margin: 100px;
    display:flex;
    flex-direction: column;
    justify-content:center;
    align-items: center;
    align-content: center;
    
 }


.titlemenu{
    width:1400px;
    padding:10px 20px;
    margin:0 auto;
    display:flex;
    flex-direction:column;
    justify-content:center;
}


 .menulist{
      
       
    width: 616px;
    /* border: 1px solid black; */
    padding: auto ;
    margin: 100px;
    display:flex;
    flex-direction: column;
    justify-content:left;
    align-items: left;
    align-content: left;
    
 }

.menu span{
    float: left;
    margin-bottom:-3px;
    padding-right: 10px;
}




 .box3{
    color: white;
   width: 432px;
   padding: 50px ;
   margin:10px;
   
}


.box{
    
    /* border: 1px solid red; */
    padding: 10px 50px;
   width:843px;
   margin: 0 auto;
 display: inline-block;

}


    .flex{
        display: flex;
        flex-wrap: nowrap;
        justify-content: center;
        align-items: space-between;
        align-content: space-between;
    }

    .flexv2{
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-content: space-between;
        align-items: space-between;
    }

hr{
    width: 60%;
    border-top: 1px solid #c9c9c9;  
}

#warning{
    width: 1200px;
    margin: 0 auto;
    padding: 10px;
    display: flex;
    justify-content:center;
}

    .row{
        display: flex;
        flex-wrap: wrap ;
    }
 
    .wrap{
        display: flex;
        flex-wrap: nowrap;
        justify-content: center;
        /* align-items: space-between;
        align-content: space-between; */
    
    }


h1{
    font-family: 'open sans', sans-serif;
    font-size: 52px;
 line-height: 1;

}



h2{
    font-family: 'open sans', sans-serif;
    font-size: 45px;
  font-weight: 200;
  line-height:1;
    
}

h3{
    font-family: 'open sans', sans-serif;
    font-weight: 400;
 

}


  
h5{
    font-family: 'Open Sans', sans-serif;
   color: white;
    font-weight:400;
}


p{
    font-family:'Open Sans', sans-serif;
    font-weight:100;
    color: white;
}

.italic{
    font-style:italic;
    color:black;
}


.big {
    font-size:200%;
}

.thin {
    font-weight: 100;
}
     

.bold{
    font-weight: bold;
}

   

     nav li{
        text-decoration: none;
        list-style-type: none;
       display: inline-block;
       justify-content: space-between;
       align-items: space-between;
       
    }

    nav a{
        color: black;
        text-decoration: none;
        font-family: 'Open Sans', sans-serif ;
    }

    
    


.description{
    color: gray;
    display: inline-block;
}


.text{
  display: flex;
  justify-content:center;

}

    button{
        background-color: black;
        color: white;
        border: 1px solid white;
        cursor: pointer;
       
    }


input{
    width: 431px;
}

    .menu{
    background-color: transparent;
    font-family: 'Open Sans', sans-serif;
    color: rgb(214,99,99);
    border: 1px solid rgb(214,99,99);
     border-radius: 5px;
     cursor: pointer;
    }




   

 

